--- a/A12 Cuberto web.html
+++ b/A12 Cuberto web.html
@@ -4,45 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuberto Layout</title>
-    <link rel="stylesheet" href="../CSS/A12 Cuberto web.css">
+    <link rel="stylesheet" href="./CSS/A12Cubertoweb.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="hero">
-        <h2>Mobile development</h2>
-        <h1>Grow your business with mobile apps</h1>
+        <h3>Mobile development</h3>
+        <h1 class="h1-hero">Grow your business with mobile apps</h1>
     </section>
     
-    <section class="project">
+    <div class="container2">
         <div class="text">
             <h3>Sleepiest</h3>
-            <p>Helps millions fall asleep every night</p>
+            <br>
+            <h1>Helps millions fall asleep every night</h1>
+            <br>
             <p>branding, design, mobile, product</p>
         </div>
         <div class="image">
             <img src="imagenes/section-1-m.png" alt="Sleepiest App">
         </div>
-    </section>
-    <section class="project">
-        <div class="image">
+    </div>
+    <div class="container3">
+        <div class="image02">
             <img src="imagenes/section-2-m.png" alt="uLesson App">
         </div>
         <div class="text">
-            <h3>uLesson</h3>
-            <p>Online platform for distance learning</p>
-            <p>web, mobile, product</p>
+            <h3>Lesson</h3>
+            <br>
+            <h1>online platform for distance learning</h1>
+            <br>
+            <p>web,online, product</p>
         </div>
-    </section>
-    <section class="project">
+    </div>
+    <div class="container2">
         <div class="text">
             <h3>Genesis Vision</h3>
-            <p>Private trust management and trading platform</p>
+            <br>
+            <h1>rivate trust management and trading platform</h1>
+            <br>
             <p>branding, design, experience, product</p>
         </div>
         <div class="image">
             <img src="imagenes/section-3-m.png" alt="Genesis Vision App">
         </div>
-    </section>
+    </div>
     <footer>
         <h3>Have an idea? Tell us about it</h3>
         <div class="footer-links">
